--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,62 @@
-/* your code here */
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+* {
+    padding: 0px;
+    margin: 0px;
+  }
+  .content{
+    background-color: black;
+    color:white;
+  }
+
+  .top{
+    padding-top: 3%;
+    margin: 0% 5% 0% 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .logo_name{
+    font-size: 30px;
+  }
+  .media-icons{
+    font-size: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap:40px;
+  }
+  .link-boxes{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0% 5%;
+}
+
+.nav-links{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    margin-bottom: 5%;
+}
+.nav-links>ul>li>a{
+    text-decoration: none;
+    color: white;
+}
+.nav-links> ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    gap:20px;
+}
+
+.page-heading{
+    padding-bottom: 10px;
+}
+.bottom-details{
+    background-color: gray;
+    
+    display: flex;
+    justify-content: space-between;
+    padding: 2% 5%;  
+} 
+
