--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
     justify-content: space-between;
     gap:40px;
   }
+.media-icons>a{
+	text-decoraation:none;
+	color:white;
+}
   .link-boxes{
     margin-top: 5%;
     display: flex;
